## Process this file with automake to produce Makefile.in
libCrayonsincludedir = $(includedir)/crayons
libCrayonsinclude_HEADERS = \
	Crayons.h \
	CrayonsFeatures.h \
	CrayonsSurfaceX11.h

noinst_HEADERS = \
	CrayonsConfig.h \
	CrayonsInternal.h \
	CAffineTransform.h \
	CBezier.h \
	CBitmap.h \
	CBitmapSurface.h \
	CBlend.h \
	CBrush.h \
	CCache.h \
	CColorPalette.h \
	CFiller.h \
	CFlattener.h \
	CFont.h \
	CFontCollection.h \
	CFontFace.h \
	CFontFamily.h \
	CFontFamilyTable.h \
	CGlyphCache.h \
	CGraphics.h \
	CGraphicsPipeline.h \
	CHashTable.h \
	CHatchBrush.h \
	CImage.h \
	CLineBrush.h \
	CMath.h \
	CMatrix.h \
	CMutex.h \
	CNoThreadMutex.h \
	CPThreadMutex.h \
	CPathBrush.h \
	CPath.h \
	CPathInterpreter.h \
	CPen.h \
	CPointArray.h \
	CPolygon.h \
	CRegion.h \
	CRegionCloner.h \
	CRegionDisposer.h \
	CRegionInterpreter.h \
	CRegionRasterizer.h \
	CRegionStack.h \
	CRegionTransformer.h \
	CRegionTranslator.h \
	CSolidBrush.h \
	CStringFormat.h \
	CStroker.h \
	CSurface.h \
	CTempFileList.h \
	CTextureBrush.h \
	CTrapezoids.h \
	CUnicodeHashTable.h \
	CUtils.h \
	CX11Surface.h
