
SUBDIRS = Custommarshalers \
		  System.Management \
		  System.Messaging \
		  System.ServiceProcess \
		  System.Runtime.Serialization.Formatters.Soap \
		  PEAPI \
		  Mono.Security \
		  System.Security \
		  Mono.Data.Tds \
		  System.Data \
		  ByteFX.Data \
		  IBM.Data.DB2 \
		  Npgsql \
		  Mono.Data.SqliteClient \
		  Mono.Data.SybaseClient \
		  Mono.Data.TdsClient \
		  System.Data.OracleClient \
		  System.XML \
		  System.Web \
		  System.Web.Services\
		  System.Runtime.Remoting \
		  Mono.GetOptions \
		  Mono.Cairo \
		  Novell.Directory.Ldap \
		  System.DirectoryServices \
		  Mono.Http 

#		  Mono.Security.Win32
#		  Mono.Posix
