lib_LIBRARIES = libILDumpAsm.a

libILDumpAsm_a_SOURCES = dump_const.c \
						 dump_flags.c \
						 dump_guid.c \
						 dump_ident.c \
						 dump_string.c \
						 dump_type.c \
						 dump_attrs.c \
						 dump_class.c \
						 dump_data.c \
						 dump_global.c \
						 dump_method.c \
						 dump_utils.c \
						 dump_java.c

AM_CFLAGS = -I$(top_srcdir)/include